--- a/sag/templates/sag/sag_form.html
+++ b/sag/templates/sag/sag_form.html
@@ -1,10 +1,12 @@
 {% extends 'base.html' %}
 {% block content %}
-<h2>{% if object %}Edit SAG{% else %}New SAG{% endif %}</h2>
-<form method="post">
+<h2 class="mb-3">{% if object %}Edit SAG{% else %}New SAG{% endif %}</h2>
+<form method="post" class="card p-3">
   {% csrf_token %}
   {{ form.as_p }}
-  <button type="submit">Save</button>
-  <a role="button" href="{% url 'sag:list' %}">Cancel</a>
+  <div class="d-flex gap-2">
+    <button class="btn btn-primary" type="submit">Save</button>
+    <a class="btn btn-outline-secondary" role="button" href="{% url 'sag:list' %}">Cancel</a>
+  </div>
 </form>
 {% endblock %}
