--- a/students/templates/students/student_confirm_delete.html
+++ b/students/templates/students/student_confirm_delete.html
@@ -1,10 +1,12 @@
 {% extends 'base.html' %}
 {% block content %}
-<h2>Delete Student</h2>
-<p>Are you sure you want to delete {{ object }}?</p>
-<form method="post">
-  {% csrf_token %}
-  <button type="submit">Confirm Delete</button>
-  <a role="button" href="{% url 'students:list' %}">Cancel</a>
-</form>
+<div class="card p-3">
+  <h2 class="mb-2">Delete Student</h2>
+  <p>Are you sure you want to delete <strong>{{ object }}</strong>?</p>
+  <form method="post" class="d-flex gap-2">
+    {% csrf_token %}
+    <button class="btn btn-danger" type="submit">Confirm Delete</button>
+    <a class="btn btn-outline-secondary" role="button" href="{% url 'students:list' %}">Cancel</a>
+  </form>
+</div>
 {% endblock %}
